Implement procedural audio system with engine growl, aggressive tire skids, and mute controls

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <h3>Car Simulator (Static)</h3>
         <p>Controls: WASD / Arrows</p>
         <p>Speed: <span id="speed">0</span> km/h</p>
+        <button id="mute-btn"
+            style="pointer-events: auto; background: #444; color: white; border: 1px solid #666; padding: 5px 10px; cursor: pointer;">Mute
+            Audio</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
